# YoungStar

./: build.gradle  youngstar.jks
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/lamemp3/: vbrquantize.c
app/src/main/cpp/libmp3lame/: id3tag.c  machine.h
app/src/main/res/anim/: pophidden_anim.xml  popshow_anim.xml
app/src/main/res/drawable/: bg1_tv_changephone.xml  bg1_tv_subaccount.xml  bg2_tv_changephone.xml  bg2_tv_subaccount.xml  bg_dashed.xml  bg_dot_msg.xml  bg_gray.xml  bg_iv_changeveris.xml  bg_iv_mine.xml  bg_red_15.xml  bg_red_22.xml  bg_round_changephoto.xml  bg_round_wallet.xml  bg_tv_sprout.xml  bg_tv_star.xml  bg_white5.xml  bg_white_22.xml  filletlinearlayout.xml  fillettextview.xml  fillettextviewup.xml  selector_act_main.xml  selector_bg_dot.xml  selector_box_register.xml  selector_care_userdetail.xml  selector_home_main.xml  selector_ivcare_userdetail.xml  selector_job_rb.xml  selector_login.xml  selector_mine_main.xml  selector_num_match.xml  selector_praise_fragstatus.xml  selector_publish_rb.xml  selector_recordaudio.xml  selector_register.xml  selector_sex_man.xml  selector_sex_woman.xml  selector_square_main.xml  selector_status_rb.xml  selector_time_match.xml  selector_txtcolor_main.xml  (+5 more)
app/src/main/res/layout/: _login.xml  _register.xml  activity_actdetail.xml  activity_addaudio.xml  activity_auditfailed.xml  activity_auditing.xml  activity_authen.xml  activity_caref.xml  activity_changephone.xml  activity_changephone2.xml  activity_changephoto.xml  activity_changeveric.xml  activity_changeveris.xml  (+144 more)
(+262 files in other folders)
